--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.6.2",
+    "@react-native-firebase/auth": "^21.6.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@types/react-native-dotenv": "^0.2.2",
     "expo": "^52.0.23",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.1.0",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11"
   },
