--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true,
-    "module": "esnext",
+    "jsx": "react",
     "moduleResolution": "node",
-    "jsx": "react-native",
-    "typeRoots": ["./node_modules/@types", "./"], // Ensure root-level types are included
-    "types": ["node"]
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "skipLibCheck": true,
+    "strict": true
   },
   "include": ["src", "env.d.ts"] // Explicitly include env.d.ts
 }
