--- a/frontend/.env
+++ b/frontend/.env
@@ -5,3 +5,4 @@ STORAGE_BUCKET=danime-47481.firebasestorage.app
 MESSAGING_SENDER_ID=58272741631
 APP_ID=1:58272741631:web:17714b3a2185a4680374ca
 MEASUREMENT_ID=G-P7T7MZYN82
+MAL_CLIENT_ID=fbd5caa09b5460aff6618fe75bc60b73
