--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -30,7 +30,20 @@ yarn-error.*
 *.pem
 
 # local env files
+.env
+.env.*
 .env*.local
 
 # typescript
 *.tsbuildinfo
+
+# Logs
+*.log
+logs/
+*.log.*
+
+# Temporary files
+tmp/
+temp/
+.cache/
+*.swp
