--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,14 +1,17 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "jsx": "react",
-    "moduleResolution": "node",
+    "jsx": "react-native",
+    "moduleResolution": "nodenext",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "paths": {
+      "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"]
+    }
   },
-  "include": ["src", "env.d.ts"] // Explicitly include env.d.ts
+  "include": ["src", "env.d.ts"]
 }
